c4prj2_input/grade.txt
Grading at Fri Jul 31 14:40:48 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:19:62: error: ‘n_cards’ undeclared (first use in this function)
       fc->decks[index].cards=realloc(fc->decks[index].cards,(n_cards+1)*sizeof(card_t*));
                                                              ^
future.c:19:62: note: each undeclared identifier is reported only once for each function it appears in
Compilation of future.c failed

Overall Grade: F
